# LostArkLoggerCpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
cpplogger/: CMakeLists.txt  main.cpp  parser.cpp
cpplogger/data/: PKT.cpp  PKT.hpp  encryption_data.hpp
cpplogger/handlers/: handle_KeyExchangeClient.cpp  handle_KeyExchangeServer.cpp
cpplogger/handlers/headers/: handle_KeyExchangeClient.hpp  handle_KeyExchangeServer.hpp
cpplogger/packets/headers/: DropBoxData.hpp  PKTBlockSkillStateNotify.hpp  PKTMoveNotify.hpp  PKTMoveStopNotify.hpp  PKTSkillCooldownNotify.hpp
custom-triplets/: x64-windows-static-custom.cmake
src/: decompressor.cpp  decompressor.hpp  loa_reassembly.cpp  loa_reassembly.hpp  main.cpp  packets.hpp  parser.cpp  parser.hpp  reader.hpp  sniffer.cpp  sniffer.hpp  steam_opcodes.hpp
src/data/: PKT.cpp  PKT.hpp  encryption_data.hpp
src/handlers/: handle_KeyExchangeClient.cpp  handle_KeyExchangeServer.cpp
src/packets/headers/: PKTChatWhisperError.hpp  PKTNewDropbox.hpp
